--- a/app/src/main/res/layout/custom_dialog_with_field.xml
+++ b/app/src/main/res/layout/custom_dialog_with_field.xml
@@ -2,6 +2,7 @@
 <androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:app="http://schemas.android.com/apk/res-auto"
     xmlns:tools="http://schemas.android.com/tools"
+    android:id="@+id/errorLayout"
     android:layout_width="wrap_content"
     android:layout_height="wrap_content"
     android:background="@drawable/view_all_rounded_corners">
@@ -59,6 +60,7 @@
         android:id="@+id/sendButton"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
+        android:layout_marginTop="20dp"
         android:layout_marginBottom="15dp"
         android:background="@drawable/button_rounded_corners_with_border"
         android:drawableStart="@drawable/ic_send"
@@ -69,4 +71,15 @@
         app:layout_constraintEnd_toEndOf="@id/emailET"
         app:layout_constraintStart_toStartOf="@id/emailET"
         app:layout_constraintTop_toBottomOf="@id/emailET" />
+
+    <TextView
+        android:id="@+id/errorMessageLabel"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:layout_marginTop="20dp"
+        android:visibility="gone"
+        app:layout_constraintStart_toStartOf="@id/sendButton"
+        app:layout_constraintEnd_toEndOf="@id/sendButton"
+        app:layout_constraintTop_toBottomOf="@id/sendButton"
+        />
 </androidx.constraintlayout.widget.ConstraintLayout>
