--- a/app/src/main/res/layout/layout_register.xml
+++ b/app/src/main/res/layout/layout_register.xml
@@ -65,7 +65,7 @@
         android:id="@+id/registerContainer"
         android:layout_width="wrap_content"
         android:layout_height="0dp"
-        android:background="@drawable/view_all_rounded_corners"
+        android:background="@drawable/view_rounded_up_corners"
         android:elevation="12dp"
         android:layout_marginTop="25dp"
         app:layout_constraintStart_toStartOf="parent"
@@ -134,36 +134,80 @@
         android:layout_height="2dp"
         android:background="@color/grayForDivider"
         android:layout_margin="25dp"
+        app:layout_constraintBottom_toTopOf="@id/emailTextInputLayout"
         app:layout_constraintTop_toBottomOf="@id/registerMethodIndicationLabel"
         app:layout_constraintStart_toStartOf="@id/registerContainer"
         app:layout_constraintEnd_toEndOf="@id/registerContainer"/>
 
-    <com.google.android.material.textfield.TextInputEditText
-        android:id="@+id/registerEmail"
-        android:layout_width="0dp"
+    <com.google.android.material.textfield.TextInputLayout
+        android:id="@+id/emailTextInputLayout"
+        android:layout_width="match_parent"
         android:layout_height="wrap_content"
         android:layout_margin="15dp"
         android:elevation="12dp"
         android:hint="@string/email"
-
-        app:layout_constraintBottom_toTopOf="@id/registerPassword"
-        app:layout_constraintCircleRadius="@dimen/cornersRadius"
+        app:startIconDrawable="@drawable/ic_email"
+        app:endIconMode="clear_text"
+        app:layout_constraintBottom_toTopOf="@id/passwordTextInputLayout"
         app:layout_constraintEnd_toEndOf="@id/registerContainer"
         app:layout_constraintHorizontal_bias="0.551"
         app:layout_constraintStart_toStartOf="@id/registerContainer"
-        app:layout_constraintTop_toBottomOf="@id/seperator" />
-
+        app:layout_constraintTop_toBottomOf="@id/seperator">
     <com.google.android.material.textfield.TextInputEditText
-        android:id="@+id/registerPassword"
-        android:layout_width="0dp"
+        android:id="@+id/registerEmail"
+        android:layout_width="match_parent"
         android:layout_height="wrap_content"
-        app:layout_constraintCircleRadius="@dimen/cornersRadius"
-        android:hint="@string/prompt_password"
+        android:drawableEnd="@drawable/ic_baseline_cancel_24"
+        app:layout_constraintCircleRadius="@dimen/cornersRadius" />
+    </com.google.android.material.textfield.TextInputLayout>
+
+    <com.google.android.material.textfield.TextInputLayout
+        android:id="@+id/passwordTextInputLayout"
+        android:layout_width="match_parent"
+        android:layout_height="wrap_content"
         android:layout_margin="15dp"
         android:elevation="12dp"
-        app:layout_constraintTop_toBottomOf="@id/registerEmail"
+        app:startIconDrawable="@drawable/ic_security"
+        app:layout_constraintCircleRadius="@dimen/cornersRadius"
+        android:hint="@string/prompt_password"
+        app:endIconMode="password_toggle"
+        app:layout_constraintTop_toBottomOf="@id/emailTextInputLayout"
         app:layout_constraintStart_toStartOf="@id/registerContainer"
-        app:layout_constraintEnd_toEndOf="@id/registerContainer" />
+        app:layout_constraintEnd_toEndOf="@id/registerContainer">
+    <com.google.android.material.textfield.TextInputEditText
+        android:id="@+id/registerPassword"
+        android:layout_width="match_parent"
+        android:layout_height="wrap_content"
+        android:inputType="textPassword"/>
+    </com.google.android.material.textfield.TextInputLayout>
 
+    <com.google.android.material.textfield.TextInputLayout
+        android:id="@+id/usernameTextInputLayout"
+        android:layout_width="match_parent"
+        android:layout_height="wrap_content"
+        android:layout_margin="15dp"
+        android:elevation="12dp"
+        app:startIconDrawable="@drawable/ic_user"
+        app:layout_constraintCircleRadius="@dimen/cornersRadius"
+        android:hint="@string/username_label"
+        app:endIconMode="clear_text"
+        app:layout_constraintTop_toBottomOf="@id/passwordTextInputLayout"
+        app:layout_constraintStart_toStartOf="@id/registerContainer"
+        app:layout_constraintEnd_toEndOf="@id/registerContainer">
+        <com.google.android.material.textfield.TextInputEditText
+            android:id="@+id/registerUsername"
+            android:layout_width="match_parent"
+            android:layout_height="wrap_content"
+            android:drawableEnd="@drawable/ic_baseline_cancel_24"
+            android:inputType="text"/>
+    </com.google.android.material.textfield.TextInputLayout>
 
+    <com.facebook.drawee.view.SimpleDraweeView
+        android:layout_width="150dp"
+        android:layout_height="150dp"
+        android:layout_marginTop="25dp"
+        app:layout_constraintEnd_toEndOf="@id/registerContainer"
+        app:layout_constraintStart_toStartOf="@id/registerContainer"
+        app:layout_constraintBottom_toBottomOf="@id/registerContainer"
+        app:placeholderImage="@drawable/cav_mata_leao" />
 </androidx.constraintlayout.widget.ConstraintLayout>
